@@ -1,34 +1,0 @@
-/*
- * Copyright (C) ExBin Project
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-package org.exbin.deltahex.intellij;
-
-import com.intellij.openapi.editor.Document;
-import com.intellij.openapi.fileEditor.FileDocumentManagerAdapter;
-import org.jetbrains.annotations.NotNull;
-
-/**
- * TODO: File manager adapter.
- *
- * @author ExBin Project (http://exbin.org)
- * @version 0.1.4 2017/03/29
- */
-public class DeltaHexFileDocumentManagerAdapter extends FileDocumentManagerAdapter {
-    @Override
-    public void beforeDocumentSaving(@NotNull Document document) {
-        // if (document instanceof )
-        super.beforeDocumentSaving(document);
-    }
-}
